test_data/Json/Unexpected/Unserializable/InvalidModelType/BasicEventElement/wrong.json.exception
Expected the model type 'BasicEventElement', but got soReallyUtterlyInvalid at: modelType